create table page_conetnt_list

--- a/app/assets/stylesheets/layout.css
+++ b/app/assets/stylesheets/layout.css
@@ -104,6 +104,14 @@ background-color: black  ;
 	color: green;
 }
 
+#rank-icon{
+//	position: absolution ;	
+}
+#teacher-name{
+//	position: absolution ;
+}
+
+
 .number-right-top {
 
 	width: 20px;
