--- a/app/views/courses/_comment_list.html.erb
+++ b/app/views/courses/_comment_list.html.erb
@@ -14,7 +14,7 @@
 			<font class="text-color-yellow"><%=User.find(c.user_id).name%></font> : <%=c.content%>
 </span>
 <span class="col-sm-3">			
-			<span class="text-right"><%=c.created_at.strftime('%Y/%m/%d %H:%S')%></span>
+			<span class="text-right"><%=c.created_at.strftime('%Y/%m/%d %H:%M')%></span>
 </span>			
 		</p></td>
 	</tr>			
