--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -3,7 +3,10 @@
 
 <h1 class="row">
 	<div class="col-md-9"><%= @course.ch_name %>(<%= @course.eng_name %>) <button class="btn btn-primary btn-lg" onclick="add_to_cart(<%=params[:id]%>,'add')">加入觀察名單</button></div>  	
-	<div class="col-md-3"><%=@teacher_show.name%> <small><span class="label label-<%=rankTag(@target_rank)%>"><%=@target_rank.to_s%></span></small></div>
+	<div class="col-md-3" id="teacher-name">
+		<%=@teacher_show.name%> 
+		<small><span class="label label-<%=rankTag(@target_rank)%>" id="rank-icon"><%=@target_rank.to_s%></span></small>
+	</div>
 </h1>
 
 
