--- a/app/views/courses/course_lists_mini.html.erb
+++ b/app/views/courses/course_lists_mini.html.erb
@@ -29,12 +29,12 @@
 					<tr class="row"><th class="<%=cos_type_class(cd.cos_type)%>"><%=cd.cos_type%></th></tr>
 					
 				<% end %>
-				<tr id="cd_<%=cd.id%>" class="row clickable-row clickable-hover" href="<%=course_path(course, :tid=>teacher.id)%>">
+				<tr id="cd_<%=cd.id%>" class="row" >
 					<td class="">
 						
 						<p id="rating_all" class="">
-							<% link_to course.ch_name, course_path(course), :class=>"course_name" %>
-							<%= course.ch_name %>
+							<%= link_to course.ch_name, course_path(course, :tid=>teacher.id), :class=>"course_name" %>
+							<% course.ch_name %>
 							<%= course.department.ch_name %>
 							<%= teacher.name %>
 							<% if @table_type=="search" %>
@@ -46,7 +46,7 @@
 								<span class="glyphicon glyphicon-minus"></span>
 							</button>
 							<% else %>
-							<button class="btn btn-danger btn-circle pull-right" onclick="add_class(<%=cd.id%>,'delete')">
+							<button class="btn btn-danger btn-circle pull-right" style="z-index:100" onclick="add_class(<%=cd.id%>,'delete')">
 								<span class="glyphicon glyphicon-minus"></span>
 							</button>
 							<% end %>
@@ -63,7 +63,7 @@
 							<%=cd.cos_type%> | 
 						<% end %>
 						<strong class="course_time"><%= cd.time %></strong>
-						| 學分: <strong><%= cd.credit %></strong>
+						| <%=fa_icon "graduation-cap" %> <strong><%= cd.credit %></strong>
 						<% credit_sum=credit_sum+cd.credit.to_i%>
 						
 						</p>
@@ -89,9 +89,9 @@
 <script>
 
 $(document).ready(function($) {
-	$(".clickable-row").click(function() {
+	/*$(".clickable-row").click(function() {
 				window.document.location = $(this).attr("href");
-	});
+	});*/
 });
 
 	<% if @table_type!="cart" %>
