--- a/app/views/departments/_form.html.erb
+++ b/app/views/departments/_form.html.erb
@@ -2,8 +2,12 @@
     <%= f.label :ch_name, "中文名稱" %>
     <%= f.text_field :ch_name %>
 	<br>
-	<%= f.label :eng_name, "英文名稱(縮寫即可)" %>
-    <%= f.text_field :eng_name %>
+	<%= f.label :dept_type, "Type" %>
+	<%= f.select :dept_type, options_for_select(Department.all.group(:dept_type).pluck(:dept_type),@department.dept_type) %>
+
+		<%= f.label :credit, "學分" %>
+		<%= f.text_field :credit %>
+		
 	<br>
     <%= f.submit %>
 <% end %>
