--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -41,7 +41,7 @@
 </div>
 
 
-	<div class="col-md-11" style="position:absolute;margin-top:600px;margin-bottom:200px;height:200px; background-color: rgba(255,255,255, 0); z-index:1000; ">
+	<div class="col-md-11" style="position:absolute;margin-top:25%;margin-bottom:5%;height:200px; background-color: rgba(255,255,255, 0); z-index:1000; ">
 		<div class="row">
 		
 			<div class="container icon-container" style="margin-left:25%;" >
