--- a/app/views/file_infos/list_by_course.html.erb
+++ b/app/views/file_infos/list_by_course.html.erb
@@ -79,10 +79,10 @@
   };
 </script>
 
-<%= render :partial=>"file_infos/template_upload" %>
+<%= render :partial=>"template_upload" %>
 
 
-<%= render :partial=>"file_infos/template_download" %>
+<%= render :partial=>"template_download" %>
 
 
 <script type="text/javascript" charset="utf-8">
