--- a/app/assets/stylesheets/layout.css
+++ b/app/assets/stylesheets/layout.css
@@ -13,6 +13,15 @@ body
   //background-color: #eeeeee;
 }	
 
+.no-margin-left{
+	margin-left:0px;
+}
+
+textcontent{
+	white-space: pre-line;
+	font-size:16px;
+}
+
 .max-z{
 	z-index:50000;
 }
@@ -151,6 +160,14 @@ background-color: black  ;
 	border-radius: 3px;
 }
 
+.sub-discussion {
+	padding: 20px;
+	margin-top: 20px ;
+	border: 1px solid #eee;
+	border-left-width: 5px;
+	border-radius: 3px;
+	border-left-color: #5bc0de;
+}
 
 .test{
 //box-shadow:1px 1px 2px rgba(100%,0%,0%,0.4),1px -1px 2px rgba(0%,100%,0%,0.4),3px 4px 2px rgba(0%,0%,100%,0.4);
