--- a/app/views/courses/_comment_list.html.erb
+++ b/app/views/courses/_comment_list.html.erb
@@ -11,7 +11,7 @@
 <%else%>
 			<font class="text-color-red">噓</font> 
 <%end%>
-			<font class="text-color-yellow"><%=User.find(c.user_id).name%></font> : <%=c.content%>
+			<font class="text-color-yellow"><%=c.user.name%></font> : <%=c.content%>
 </span>
 <span class="col-sm-3">			
 			<span class="text-right"><%=c.created_at.strftime('%Y/%m/%d %H:%M')%></span>
