raider_list_like

--- a/app/views/courses/_show_teacherOnCourse.html.erb
+++ b/app/views/courses/_show_teacherOnCourse.html.erb
@@ -300,7 +300,16 @@
 		if(!confirm(str))
 			return false ;
 		
-	//	$.ajax();		
+		$.ajax({
+			type: "GET",
+			dataType: "script",
+  			url: "/courses/raider_list_like" ,
+  			data:{
+  				like_type: pre ,
+  				list_id : id 
+  			},
+  			success: function(){}
+  		});			
 			
 	}
 	
