--- a/app/views/courses/course_raider.html.erb
+++ b/app/views/courses/course_raider.html.erb
@@ -40,12 +40,21 @@
 		<td>
 			<span class="col-sm-6"><%=c.content%></span>
 			<span class="col-sm-4"><%=c.created_at.strftime('%Y/%m/%d %H:%M')%> <%=c.user.name%></span>
-			<span class="col-sm-2">
+			<span class="col-sm-2" id="rank_span_<%=j c.id.to_s%>">
+			<% if ContentListRank.where(:user_id=>current_user.id, :raider_content_list_id=>c.id).first.presence %>
+				<i class="fa fa-thumbs-o-up"></i> 
+				<span style="color: green ;"><%=c.content_list_ranks.where(:rank=>1).count.to_s%></span>
+				&nbsp;&nbsp;&nbsp;&nbsp;					
+				<i class="fa fa-thumbs-o-down"></i> 
+				<span style="color: red ;"><%=c.content_list_ranks.where(:rank=>2).count.to_s%></span>
+			<% else %>
 				<i class="fa fa-thumbs-o-up"  onclick="return preferClick(1,<%=j c.id.to_s%>);"></i> 
 				<span style="color: green ;"><%=c.content_list_ranks.where(:rank=>1).count.to_s%></span>
 				&nbsp;&nbsp;&nbsp;&nbsp;					
 				<i class="fa fa-thumbs-o-down" onclick="return preferClick(2,<%=j c.id.to_s%>);"></i> 
 				<span style="color: red ;"><%=c.content_list_ranks.where(:rank=>2).count.to_s%></span>
+			<% end %>
+				
 			</span>
 		</td>
 	</tr>
