--- a/app/views/courses/course_raider.html.erb
+++ b/app/views/courses/course_raider.html.erb
@@ -6,23 +6,23 @@
 	
 <%for i in 1..18 do%>		
 	<%if 2**(i-1) & @page.exam_record !=0 %>
-        <button type="button" class="btn active btn-danger" >
+        <button type="button" class="btn btn-danger" style="border-color: #fff;border-width: 0px;">
     <% else %>
-        <button type="button" class="btn btn-default" >
+        <button type="button" class="btn btn-default" style="border-color: #fff;border-width: 0px;">
     <% end %>
         	<span><%=i.to_s%></span>
         </button> 
 <%end%>        	 	
       	</div>    	
-</br>
+</br></br>
 作業週：（該週可能有作業）  	
 		<div class="btn-group">
 	
 <%for i in 1..18 do%>	
 	<%if 2**(i-1) & @page.homework_record !=0 %>
-		<button type="button" class="btn active btn-warning" >
+		<button type="button" class="btn btn-warning" style="border-color: #fff;border-width: 0px;" >
     <% else %>
-       	<button type="button" class="btn btn-default" >
+       	<button type="button" class="btn btn-default" style="border-color: #fff;border-width: 0px;">
     <% end %>   	
         	<span><%=i.to_s%></span>
         </button>         
@@ -44,14 +44,14 @@
 			<% if ContentListRank.where(:user_id=>current_user.id, :raider_content_list_id=>c.id).first.presence %>
 				<i class="fa fa-thumbs-o-up"></i> 
 				<span style="color: green ;"><%=c.content_list_ranks.where(:rank=>1).count.to_s%></span>
-				&nbsp;&nbsp;&nbsp;&nbsp;					
+				&nbsp;&nbsp;&nbsp;&nbsp;  
 				<i class="fa fa-thumbs-o-down"></i> 
 				<span style="color: red ;"><%=c.content_list_ranks.where(:rank=>2).count.to_s%></span>
 			<% else %>
-				<i class="fa fa-thumbs-o-up"  onclick="return preferClick(1,<%=j c.id.to_s%>);"></i> 
+				<i class="fa fa-thumbs-o-up clickable-hover"  onclick="return preferClick(1,<%=j c.id.to_s%>);"></i> 
 				<span style="color: green ;"><%=c.content_list_ranks.where(:rank=>1).count.to_s%></span>
 				&nbsp;&nbsp;&nbsp;&nbsp;					
-				<i class="fa fa-thumbs-o-down" onclick="return preferClick(2,<%=j c.id.to_s%>);"></i> 
+				<i class="fa fa-thumbs-o-down clickable-hover" onclick="return preferClick(2,<%=j c.id.to_s%>);"></i> 
 				<span style="color: red ;"><%=c.content_list_ranks.where(:rank=>2).count.to_s%></span>
 			<% end %>
 				
