--- a/app/views/courses/raider_form.html.erb
+++ b/app/views/courses/raider_form.html.erb
@@ -1,4 +1,3 @@
-<%=form_tag "/courses/course_raider", :remote=>true do%>
 	<div class="row">
 	<i class="fa fa-cube"></i> 作業/考試：</br></br>
 	考試週：（該週可能有考試）  		
@@ -30,13 +29,27 @@
 	<hr>
 	<div class="row">
 		<i class="fa fa-cube"></i> 其他內容：
-		<div class="btn btn-success btn-circle" name="button" onclick="addRow();">＋</div>
-		<div class="btn btn-danger btn-circle" name="button" onclick="RemoveRow();">－</div>
 		</br></br>
 
 		<table class="table" id="raider_content_table">
 			<tbody>		
-
+				<% @page.raider_content_lists.order('updated_at DESC').each do |c|%>
+				<% if c.user_id == current_user.id%>
+					<tr id="content_list_old_<%=j c.id.to_s%>">
+						<td><%=content_type_to_html(c.content_type)%></td>
+						<td>
+							<span class="col-sm-6"><%=c.content%></span>
+							<span class="col-sm-4"><%=c.updated_at.strftime('%Y/%m/%d %H:%M')%> <%=c.user.name%></span>
+							<span class="col-sm-2">
+								<% if current_user.id == c.user_id %>
+									<div class="btn btn-success btn-circle" name="button" onclick="return EditOld($(this).parent('span').parent('td'));">E</div>
+									<div class="btn btn-danger btn-circle" name="button" onclick="DelOld();">R</div>
+								<%end %>
+							</span>
+						</td>
+					</tr>
+				<% end %>	
+				<% end %>
 			</tbody>
 		</table>
 		
@@ -46,7 +59,7 @@
 	<%=hidden_field_tag "ct_id",params[:ct_id] %> 
 	<input id="test" name="test" type="hidden" value="0">
 	<input id="hw" name="hw" type="hidden" value="0">
-	<p class="text-right">
-		<%=submit_tag "確定修改", :class=>"btn btn-primary", :onclick=>"return submit_check();"%>
-	</p>
-<%end%>
+	<div class="btn btn-success btn-circle" name="button" onclick="addRow();">＋</div>
+	<div class="btn btn-danger btn-circle" name="button" onclick="RemoveRow();">－</div>
+<%=submit_tag "確定修改", :class=>"btn btn-primary", :onclick=>"return submit_check();"%>
+
